# pyclip

./: .coveragerc  .travis.yml  LICENSE  README.md  appveyor.yml  pyproject.toml  setup.py
.github/workflows/: macos.yml  release.yml  unittests.yml
ci/: install.bat  runtests.ps1
docs/: README.md  conf.py  doc-requirements.txt  index.rst
docs/api/: base.rst  cli.rst  index.rst  macos_clip.rst  util.rst  win_clip.rst  xclip_clip.rst
pyclip/: __init__.py  __main__.py  base.py  cli.py  macos_clip.py  util.py  wayland_clip.py  win_clip.py  xclip_clip.py
pyperclip3/: __init__.py  base.py  cli.py  macos_clip.py  util.py  win_clip.py  xclip_clip.py
tests/: test_clipboard.py
